--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html>
+   <head>
+      <style>
+         #myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+      </style>
+   </head>
    <body>
-       <video autoplay loop width="100%">
+       <video id="myVideo" autoplay loop width="100%">
 
     <source src="rickroll_in_144p.mp4"
             type="video/mp4">
